flags jvm Dockerfile