@@ -1,18 +1,20 @@
-FROM eclipse-temurin:21 AS build
+# Etapa de build
+FROM eclipse-temurin:21-jdk AS build
 WORKDIR /app
 COPY . .
+
+# Empaqueta la app sin correr tests
 RUN ./mvnw clean package -DskipTests
 
-FROM eclipse-temurin:21-jdk AS jlink
-RUN $JAVA_HOME/bin/jlink \
-    --add-modules java.base,java.logging,java.sql \
-    --output /custom-jre \
-    --strip-debug --no-header-files --no-man-pages
-
-FROM debian:bookworm-slim
+# Etapa final (runtime)
+FROM eclipse-temurin:21-jre-jammy
 WORKDIR /app
+
+# Copia el JAR construido
 COPY --from=build /app/target/jobsy-rest-api-1.0.jar jobsy.jar
-COPY --from=jlink /custom-jre /opt/jre
-ENV PATH="/opt/jre/bin:$PATH"
+
+# Expone el puerto que Render usará
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "jobsy.jar"]
+
+# Flags de JVM para cold start más rápido y bajo consumo
+ENTRYPOINT ["java", "-Xms256m", "-Xmx512m", "-XX:+TieredCompilation", "-XX:TieredStopAtLevel=1", "-XX:+UseCompressedOops", "-jar", "jobsy.jar"]
